--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
     <main>
         <head>
-            <h1>Título do Site</h1>
+            <h1>Curso grátis</h1>
         </head>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo</p>
+            <h2>Curso de HTML5 com CSS</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias ipsam explicabo quo debitis, voluptatum aperiam nemo. Odit illo saepe iste corporis maxime quo quos, fugiat esse sapiente et. Deserunt, maiores?</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo</p>
+            <h2>Curso JS</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam cupiditate iure deserunt eos optio vel magnam quas reiciendis voluptate odit, iusto incidunt commodi quidem ad, asperiores quo quos atque in!</p>
         </article>
     </main>
     
