--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
     <main>
         <head>
             <h1>Curso grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso HTML">
         </head>
         <article>
             <h2>Curso de HTML5 com CSS</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Alias ipsam explicabo quo debitis, voluptatum aperiam nemo. Odit illo saepe iste corporis maxime quo quos, fugiat esse sapiente et. Deserunt, maiores?</p>
+            <p>Acesse o curso de HTML5</p>
         </article>
         <article>
             <h2>Curso JS</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam cupiditate iure deserunt eos optio vel magnam quas reiciendis voluptate odit, iusto incidunt commodi quidem ad, asperiores quo quos atque in!</p>
+            <p>Acesse o curso de JavaScript</p>
         </article>
     </main>
     
